--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,19 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <!--Hibernate, JDB y MySQL -->
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.4.3.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.4.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
