--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/bdmascotas
+spring.datasource.url=jdbc:mysql://localhost:3306/bdmascotas?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
