primera version de login con jwt + interceptores-- jwt en header

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=root
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+jwt.secret=miClaveSecretaParaJWT12345
+jwt.expiration=3600000  
