--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "c4e60787-0ec3-4e79-ab8b-f6c9e69d8cce"
   },
   "newProjectRoot": "projects",
   "projects": {
