--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -1,11 +1,15 @@
-/* To learn more about Typescript configuration file: https://www.typescriptlang.org/docs/handbook/tsconfig-json.html. */
-/* To learn more about Angular compiler options: https://angular.dev/reference/configs/angular-compiler-options. */
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
     "types": [],
-    "allowJs": true
+    "allowJs": true,
+    "baseUrl": "src",
+    "paths": {
+      "app/*": ["app/*"],
+      "services/*": ["app/services/*"],
+      "envaironment/*": ["envaironment/*"]
+    }
   },
   "include": [
     "src/**/*.ts"
