--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,7 +2,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/bdmascotas
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.activate=
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.profiles.active=dev
 jwt.secret=Zm9vYmFyMTIzNDU2Nzg5MGFiY2RlZmdoaWprbG1ub3BxcnN0dXZ3eHl6
 jwt.expiration=3600000
 logging.level.org.springframework.security=DEBUG
